--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c7d68c91dc70197ceb55",
+    "/css/app.css": "/css/app.css?id=cd2a7226a5582da06509"
 }
